--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "js-error-handler",
-  "version": "0.0.1",
+  "name": "js-normalize-error",
+  "version": "0.0.2",
   "description": "Parse js Exceptions and Http responses to readable and standardized objects",
-  "main": "./distribution/ErrorHandler.js",
+  "main": "./distribution/index.js",
   "scripts": {
-    "build": "babel -d distribution",
+    "build": "node_modules/.bin/babel src -d distribution",
     "prepublishOnly": "npm run build",
     "test": "jest"
   },
@@ -24,10 +24,13 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
