--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "js-normalize-error",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Parse js Exceptions and Http responses to readable and standardized objects",
-  "main": "./distribution/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "build": "node_modules/.bin/babel src -d distribution",
     "prepublishOnly": "npm run build",
@@ -26,12 +26,18 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^5.7.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
+    "prettier": "^1.14.3",
     "regenerator-runtime": "^0.12.1"
   }
 }
