--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 { 
   "presets": ["es2015"],
-  "plugins": ["transform-class-properties","transform-object-rest-spread"]
+  "plugins": ["transform-class-properties","transform-object-rest-spread","babel-plugin-transform-es2015-modules-simple-commonjs"]
 }
