--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "js-normalize-error",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Parse js Exceptions and Http responses to readable and standardized objects",
   "main": "./distribution/index.js",
   "scripts": {
-    "build": "node_modules/.bin/babel src -d distribution",
+    "build": "node_modules/.bin/babel src --out-dir distribution",
     "prepublishOnly": "npm run build",
     "test": "jest"
   },
@@ -29,6 +29,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-simple-commonjs": "^0.3.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^5.7.0",
